--- a/README
+++ b/README
@@ -9,22 +9,9 @@ the URL https://github.com/Masoud-Fatemi/MRMDS-dataset .
 
 About Dataset:
 
-     In the context of Natural Language Processing (NLP) specifically in the field of Topic Modeling and Sentminet Analysis
- for methods which simultaneously models topics and sentiments, the first requirement for the evaluation in the data 
- retrieval task is to use a dataset with both sentiment and topic labels for every document. Given the absence of such
-  dataset, we created the following datasets with both sentiment and topic tags for the evaluating purpose.
+     In the context of Natural Language Processing (NLP) specifically in the field of Topic Modeling and Sentminet Analysis for methods which simultaneously models topics and sentiments, the first requirement for the evaluation in the data retrieval task is to use a dataset with both sentiment and topic labels for every document. Given the absence of such dataset, we created the following datasets with both sentiment and topic tags for the evaluating purpose.
 
-     We created this dataset by compilation of the Movie Review (MR) and the Multi-Domains Sentiment (MDS) datasets which both
- of them are well-known datasets in the field of Opinion Mining and Sentminet Analysis. All of these 5 datasets (MDS alone
- consists of 4 different parts, each containing 2000 documents) only have sentiment labels. But each of these documents 
- can be considered to represent a specific topic. Thus, these datasets were combined together to create a new larger 
- dataset called MRMDS, which consists of 10000 documents, 5000 with positive tags and 5000 with negative tags, and five 
- topics including: movie, book, DVD, electronic, and kitchen appliances. After the preprocessing phase, each of these
- documents was converted to the lib-svm file using the 2000-word dictionary of the 20NG dataset. Of the 10000 document
- obtained by combining these 5 datasets, 7500 documents with even sentiment label distribution (3750 documents labels
- with positive and 3750 documents with negative labels) and even topic distribution (1500 documents -consisting of 750
- positive and 750 negative documents- per topic,) were assigned to the training set. The remaining 2500 documents 
- (500 documents -consisting of 250 positive and 250 negative documents- per topic) were assigned to the testing set.
+     We created this dataset by compilation of the Movie Review (MR) and the Multi-Domains Sentiment (MDS) datasets which both of them are well-known datasets in the field of Opinion Mining and Sentminet Analysis. All of these 5 datasets (MDS alone consists of 4 different parts, each containing 2000 documents) only have sentiment labels. But each of these documents can be considered to represent a specific topic. Thus, these datasets were combined together to create a new larger dataset called MRMDS, which consists of 10000 documents, 5000 with positive tags and 5000 with negative tags, and five topics including: movie, book, DVD, electronic, and kitchen appliances. After the preprocessing phase, each of these documents was converted to the lib-svm file using the 2000-word dictionary of the 20NG dataset. Of the 10000 document obtained by combining these 5 datasets, 7500 documents with even sentiment label distribution (3750 documents labels with positive and 3750 documents with negative labels) and even topic distribution (1500 documents -consisting of 750 positive and 750 negative documents- per topic,) were assigned to the training set. The remaining 2500 documents (500 documents -consisting of 250 positive and 250 negative documents- per topic) were assigned to the testing set.
 
  ====================
 
@@ -45,4 +32,3 @@ This dataset was first used in Masoud Fatemi and Mehran Safayani,
  Data Format Summary:
 
 MRMDS-dataset: contains this readme and three other files (train, test, vocab) which created and used by Fatemi/Safayani in described paper.
- 
